fix side nav close button mobile view

--- a/assets/style/nav.css
+++ b/assets/style/nav.css
@@ -313,4 +313,7 @@ img {
   .nav-items {
     display: none;
   }
+  .close-nav-items{
+    width: fit-content;
+  }
 }
